Kubernetes-4-basics-v4/Kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopsphere-ingress
  namespace: shopsphere
  # annotations:
  #   nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: shopsphere.local
      http: # Indented right under host
        paths:
          # Rule 1: Send all API requests from the browser to the backend service
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
          # Rule 2: Send all other requests (general web traffic) to the static Vite frontend
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
